--- a/index.html
+++ b/index.html
@@ -13,14 +13,27 @@
 <body>
   <header>
     <section class="menu">
-      <div class="container">
-          <div class="left d-bug">L</div>
-          <div class="right d-bug">R</div>
+      <div class="container col d-flex">
+          <div class="logo d-bug">Logo</div>
+          <div class="hamburger d-bug">Ham</div>
+          <div class="commands">commands</div>
       </div>
     </section>
   </header>
 
-  <main></main>
+  <main>
+    <section class="card">
+      <div class="container">
+        <div class="row d-flex">
+          <div class="col d-bug">Get a demo application</div>
+          <div class="col d-bug">Clean Code</div>
+          <div class="col d-bug">Web Design</div>
+          <div class="col d-bug">Developmen</div>
+          <div class="col d-bug">Branding</div>
+        </div>
+      </div>
+    </section>
+  </main>
   
   <footer></footer>
 </body>
