[add] blocks-top-main

--- a/index.html
+++ b/index.html
@@ -22,16 +22,70 @@
   </header>
 
   <main>
-    <section class="card">
+    <!-- demo -->
+    <section class="demo">
       <div class="container">
         <div class="row d-flex">
-          <div class="col d-bug">Get a demo application</div>
-          <div class="col d-bug">Clean Code</div>
-          <div class="col d-bug">Web Design</div>
-          <div class="col d-bug">Developmen</div>
-          <div class="col d-bug">Branding</div>
+          
+          <div class="col d-bug">
+            <div class="card">
+              Get a demo application
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              Clean Code
+            </div>
+          </div>z
+
+          <div class="col d-bug">
+            <div class="card">
+              Web Design
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="car">
+              Developmen
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              Branding
+            </div>
+          </div>
+
         </div>
       </div>
+    </section>
+    <!-- /demo -->
+
+    <section class="strategic">
+      <div class="container">
+        <div class="row d-flex">
+          <div class="col d-bug">
+            <div class="card">
+              img
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              <h3>Strategic Planning</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nulla, consequatur nisi, sequi modi deleniti perferendis repellat odit, vero accusantium eos in facere. Sapiente, beatae quam labore placeat vitae deserunt.</p>
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              img
+            </div>
+          </div>
+        </div>
+      </div>
+
     </section>
   </main>
   
