[add] blocks-testimonials

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="card">
               Clean Code
             </div>
-          </div>z
+          </div>
 
           <div class="col d-bug">
             <div class="card">
@@ -62,9 +62,11 @@
     </section>
     <!-- /demo -->
 
+    <!-- strategic -->
     <section class="strategic">
       <div class="container">
         <div class="row d-flex">
+
           <div class="col d-bug">
             <div class="card">
               img
@@ -73,7 +75,7 @@
 
           <div class="col d-bug">
             <div class="card">
-              <h3>Strategic Planning</h3>
+              <h2>Strategic Planning</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nulla, consequatur nisi, sequi modi deleniti perferendis repellat odit, vero accusantium eos in facere. Sapiente, beatae quam labore placeat vitae deserunt.</p>
             </div>
           </div>
@@ -83,9 +85,51 @@
               img
             </div>
           </div>
+
         </div>
       </div>
+    </section>
+    <!-- /strategic -->
 
+    <!-- testimonials -->
+    <section class="testimonials">
+      <div class="container">
+        <div class="row d-flex">
+
+          <div class="col d-bug">
+            <div class="card">
+              <span>TESTIMONIALS</span>
+              <h2>We are commited expert partners</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ex optio fugiat, quia qui vitae eos iste perferendis iure mollitia.</p>
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              img
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nesciunt laboriosam mollitia maxime quisquam sint dignissimos amet, consectetur perspiciatis temporibus, necessitatibus facilis illo atque quidem esse culpa voluptates sequi eos voluptate aliquid explicabo placeat exercitationem eveniet illum. Ratione accusantium deleniti itaque iure exercitationem corrupti tempora delectus quia impedit officiis ut assumenda provident, vel illum explicabo. Optio tenetur dolor assumenda eum, consequatur non possimus explicabo delectus aliquam maiores officia illo. Nesciunt ipsa id facere accusamus voluptatum inventore asperiores voluptates quisquam similique officiis, modi sunt impedit porro, facilis nemo corporis minus numquam commodi accusantium sit quasi fugit fugiat? Id illo voluptate fuga.</p>
+            </div>
+          </div>
+
+
+          <div class="col d-bug">
+            <div class="card">
+              img
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aut dolores explicabo magnam autem voluptatum nihil. Exercitationem, in expedita dignissimos esse suscipit ad perspiciatis, deleniti, fugit odio assumenda recusandae beatae.</p>
+            </div>
+          </div>
+
+
+          <div class="col d-bug">
+            <div class="card">
+              img
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aut dolores explicabo magnam autem voluptatum nihil. Exercitationem, in expedita dignissimos esse suscipit ad perspiciatis, deleniti, fugit odio assumenda recusandae beatae.
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </section>
   </main>
   
