[add] blocks-main-footer

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
           </div>
 
-          <div class="col d-bug">
+          <div class="col planning d-bug">
             <div class="card">
               <h2>Strategic Planning</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nulla, consequatur nisi, sequi modi deleniti perferendis repellat odit, vero accusantium eos in facere. Sapiente, beatae quam labore placeat vitae deserunt.</p>
@@ -104,15 +104,15 @@
             </div>
           </div>
 
-          <div class="col d-bug">
+          <div class="col nat d-bug">
             <div class="card">
               img
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nesciunt laboriosam mollitia maxime quisquam sint dignissimos amet, consectetur perspiciatis temporibus, necessitatibus facilis illo atque quidem esse culpa voluptates sequi eos voluptate aliquid explicabo placeat exercitationem eveniet illum. Ratione accusantium deleniti itaque iure exercitationem corrupti tempora delectus quia impedit officiis ut assumenda provident, vel illum explicabo. Optio tenetur dolor assumenda eum, consequatur non possimus explicabo delectus aliquam maiores officia illo. Nesciunt ipsa id facere accusamus voluptatum inventore asperiores voluptates quisquam similique officiis, modi sunt impedit porro, facilis nemo corporis minus numquam commodi accusantium sit quasi fugit fugiat? Id illo voluptate fuga.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nesciunt laboriosam mollitia maxime quisquzam sint dignissimos amet, consectetur perspiciatis ztemporibus, necessitatibus facilis illo atque quidem esse culpa voluptates sequi eos voluptate aliquid explicabo placeat exercitationem eveniet illum. Ratione accusantium deleniti itaque iure exercitationem corrupti tempora delectus quia impedit officiis ut assumenda provident, vel illum explicabo.</p>
             </div>
           </div>
 
 
-          <div class="col d-bug">
+          <div class="col celia d-bug">
             <div class="card">
               img
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aut dolores explicabo magnam autem voluptatum nihil. Exercitationem, in expedita dignissimos esse suscipit ad perspiciatis, deleniti, fugit odio assumenda recusandae beatae.</p>
@@ -120,7 +120,7 @@
           </div>
 
 
-          <div class="col d-bug">
+          <div class="col bob d-bug">
             <div class="card">
               img
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aut dolores explicabo magnam autem voluptatum nihil. Exercitationem, in expedita dignissimos esse suscipit ad perspiciatis, deleniti, fugit odio assumenda recusandae beatae.
@@ -131,8 +131,152 @@
         </div>
       </div>
     </section>
+
+    <!-- benefits -->
+    <section class="benefits">
+      <div class="container">
+        <div class="row d-flex">
+
+          <div class="col d-bug">
+              <h2>Benefits of working with br us</h2>
+          </div>
+
+          <div class="col quality d-bug">
+            <div class="card">
+              <h2>01</h2>
+              <h3>Hight Quality</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              <h2>02</h2>
+              <h3>Hight Quality</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              <h2>03</h2>
+              <h3>Hight Quality</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              <h2>04</h2>
+              <h3>Hight Quality</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              <h2>05</h2>
+              <h3>Hight Quality</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              <h2>06</h2>
+              <h3>Hight Quality</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- /benefits -->
+
+    <!-- about us -->
+    <section class="about-us">
+      <div class="container">
+        <div class="row">
+
+          <div class="col d-bug">
+            <div class="card">
+              <h2>About Us</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sunt incidunt, delectus dolorem itaque recusandae? Deserunt, dolore. Tempore, enim. Possimus laborum, ipsum neque tenetur reprehenderit sapiente libero dolore, sequi quisquam sunt sit debitis dicta recusandae illum est dolores saepe, suscipit commodi corrupti. Quasi, laborum! Harum ipsa impedit quis nemo quod!</p>
+            </div>
+          </div>
+
+          <div class="col middle d-bug">
+            <div class="card">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sunt incidunt, delectus dolorem itaque recusandae? Deserunt, dolore. Tempore, enim. Possimus laborum, ipsum neque tenetur reprehenderit sapiente libero dolore, sequi quisquam sunt sit debitis dicta recusandae illum est dolores saepe, suscipit commodi corrupti. Quasi, laborum! Harum ipsa impedit quis nemo quod!</p>
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              img
+              <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, neque?</h3>
+              <a href="">Find me on linkedin</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- get-started -->
+    <section class="get-started">
+      <div class="container">
+        <div class="row">
+
+          <div class="col d-bug">
+            <div class="card">
+              <span>GET STARTED</span>
+              <H3>Simple, Transparent Pricing</H3>
+            </div>
+          </div>
+
+          <div class="col free d-bug">
+            <div class="card">
+              <h2>It's Free!</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo et dignissimos dolore illo ex nam!</p>
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              <a href="#">Get Started</a> <br>
+              <span>Copyright 2021 Boolean</span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- /get-started -->
   </main>
   
-  <footer></footer>
+  <footer>
+    <section class="footer">
+      <div class="container">
+        <div class="row">
+
+          <div class="col">
+            <div class="card">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam est aliquid nesciunt a rerum neque?</p>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+  </footer>
 </body>
 </html>
