[add] top-layout-responsive-tablet-desktop

--- a/index.html
+++ b/index.html
@@ -13,10 +13,29 @@
 <body>
   <header>
     <section class="menu">
-      <div class="container col d-flex">
-          <div class="logo d-bug">Logo</div>
-          <div class="hamburger d-bug">Ham</div>
-          <div class="commands">commands</div>
+      <div class="container">
+        <div class="row d-flex">
+          <div class="logo col d-bug">Logo</div>
+          <div class="hamburger col d-bug">Ham</div>
+          <div class="commands col">
+            <nav>
+              <ul>
+                <li>
+                  <a href="#">###</a>
+                </li>
+                <li>
+                  <a href="#">###</a>
+                </li>
+                <li>
+                  <a href="#">###</a>
+                </li>
+                <li>
+                  <a href="#">###</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </div>
     </section>
   </header>
@@ -29,31 +48,41 @@
           
           <div class="col d-bug">
             <div class="card">
-              Get a demo application
+              <h2>
+                Get a demo application
+              </h2>
             </div>
           </div>
 
           <div class="col d-bug">
             <div class="card">
-              Clean Code
+              <h2>
+                Clean Code
+              </h2>
             </div>
           </div>
 
           <div class="col d-bug">
             <div class="card">
-              Web Design
-            </div>
-          </div>
-
-          <div class="col d-bug">
-            <div class="car">
-              Developmen
+              <h2>
+                Web Design
+              </h2>
             </div>
           </div>
 
           <div class="col d-bug">
             <div class="card">
-              Branding
+              <h2>
+                Developmen
+              </h2>
+            </div>
+          </div>
+
+          <div class="col d-bug">
+            <div class="card">
+              <h2>
+                Branding
+              </h2>
             </div>
           </div>
 
@@ -93,16 +122,14 @@
 
     <!-- testimonials -->
     <section class="testimonials">
+      <div class="container d-bug">
+        <p>TESTIMONIALS</p>
+        <h2>We are commited expert partners</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ex optio fugiat, quia qui vitae eos iste perferendis iure mollitia.</p>
+      </div>
+
       <div class="container">
         <div class="row d-flex">
-
-          <div class="col d-bug">
-            <div class="card">
-              <span>TESTIMONIALS</span>
-              <h2>We are commited expert partners</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ex optio fugiat, quia qui vitae eos iste perferendis iure mollitia.</p>
-            </div>
-          </div>
 
           <div class="col nat d-bug">
             <div class="card">
@@ -135,12 +162,11 @@
     <!-- benefits -->
     <section class="benefits">
       <div class="container">
+        <h2>Benefits of working with br us</h2>
+      </div>
+
+      <div class="container">
         <div class="row d-flex">
-
-          <div class="col d-bug">
-              <h2>Benefits of working with br us</h2>
-          </div>
-
           <div class="col quality d-bug">
             <div class="card">
               <h2>01</h2>
