--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700;800&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Document</title>
 </head>
 
@@ -15,22 +16,30 @@
     <section class="menu">
       <div class="container">
         <div class="row d-flex">
-          <div class="logo col d-bug">Logo</div>
-          <div class="hamburger col d-bug">Ham</div>
+          <div class="logo col">
+            <img src="img/logo.png" alt="">
+          </div>
+          <div class="hamburger col">
+            <i class="fa-sharp fa-solid fa-bars"></i>
+          </div>
+          <!-- tablet e desktop -->
           <div class="commands col">
             <nav>
               <ul>
                 <li>
-                  <a href="#">###</a>
+                  <a href="#">Planning</a>
                 </li>
                 <li>
-                  <a href="#">###</a>
+                  <a href="#">Testimonials</a>
                 </li>
                 <li>
-                  <a href="#">###</a>
+                  <a href="#">Features</a>
                 </li>
                 <li>
-                  <a href="#">###</a>
+                  <a href="#">About Us</a>
+                </li>
+                <li>
+                  <a class="btn-border" href="#">Get Started</a>
                 </li>
               </ul>
             </nav>
@@ -46,43 +55,61 @@
       <div class="container">
         <div class="row d-flex">
           
-          <div class="col d-bug">
-            <div class="card">
-              <h2>
-                Get a demo application
-              </h2>
+          <div class="col">
+            <div class="card d-flex">
+              <div class="top">
+                <h2>
+                  Get a demo application
+                </h2>
+                <p class="l-height">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores provident, odit ratione, pariatur nesciunt corporis consectetur distinctio odio veritatis laborum incidunt.</p>
+                <a class="btn btn-border" href="#">
+                  <i class="fa-brands fa-apple"></i>
+                  App Store
+                </a>
+              </div>
+              <div class="phone d-flex">
+                <img src="img/phone.png" alt="">
+              </div>
             </div>
           </div>
 
-          <div class="col d-bug">
-            <div class="card">
+          <div class="col text-center">
+            <div class="card d-flex">
+              <i class="icon fa-solid fa-file-code"></i>
               <h2>
                 Clean Code
               </h2>
+              <p class="l-height">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores provident, odit ratione, pariatur nesciunt corporis consectetur distinctio odio veritatis laborum incidunt.</p>
             </div>
           </div>
 
-          <div class="col d-bug">
-            <div class="card">
+          <div class="col text-center">
+            <div class="card d-flex">
+              <i class="icon fa-solid fa-compass-drafting"></i>
               <h2>
                 Web Design
               </h2>
+              <p class="l-height">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores provident, odit ratione, pariatur nesciunt corporis consectetur distinctio odio veritatis laborum incidunt.</p>
             </div>
           </div>
 
-          <div class="col d-bug">
-            <div class="card">
+          <div class="col text-center">
+            <div class="card d-flex">
+              <i class="icon fa-solid fa-laptop-code"></i>
               <h2>
                 Developmen
               </h2>
+              <p class="l-height">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores provident, odit ratione, pariatur nesciunt corporis consectetur distinctio odio veritatis laborum incidunt.</p>
             </div>
           </div>
 
-          <div class="col d-bug">
-            <div class="card">
+          <div class="col text-center ">
+            <div class="card d-flex">
+              <i class="icon fa-solid fa-bullhorn"></i>
               <h2>
                 Branding
               </h2>
+              <p class="l-height">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores provident, odit ratione, pariatur nesciunt corporis consectetur distinctio odio veritatis laborum incidunt.</p>
             </div>
           </div>
 
@@ -99,19 +126,15 @@
           <div class="col d-bug">
             <div class="card">
               img
-            </div>
-          </div>
-
-          <div class="col planning d-bug">
-            <div class="card">
               <h2>Strategic Planning</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima nulla, consequatur nisi, sequi modi deleniti perferendis repellat odit, vero accusantium eos in facere. Sapiente, beatae quam labore placeat vitae deserunt.</p>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, officia illo velit quam ab architecto sint veritatis quas obcaecati ut in nam cumque eos excepturi temporibus veniam fuga? Reprehenderit, eaque.</p>
             </div>
           </div>
 
           <div class="col d-bug">
             <div class="card">
               img
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, officia illo velit quam ab architecto sint veritatis quas obcaecati ut in nam cumque eos excepturi temporibus veniam fuga? Reprehenderit, eaque.</p>
             </div>
           </div>
 
@@ -223,18 +246,12 @@
     <!-- about us -->
     <section class="about-us">
       <div class="container">
-        <div class="row">
+        <div class="row d-flex">
 
           <div class="col d-bug">
             <div class="card">
               <h2>About Us</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sunt incidunt, delectus dolorem itaque recusandae? Deserunt, dolore. Tempore, enim. Possimus laborum, ipsum neque tenetur reprehenderit sapiente libero dolore, sequi quisquam sunt sit debitis dicta recusandae illum est dolores saepe, suscipit commodi corrupti. Quasi, laborum! Harum ipsa impedit quis nemo quod!</p>
-            </div>
-          </div>
-
-          <div class="col middle d-bug">
-            <div class="card">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sunt incidunt, delectus dolorem itaque recusandae? Deserunt, dolore. Tempore, enim. Possimus laborum, ipsum neque tenetur reprehenderit sapiente libero dolore, sequi quisquam sunt sit debitis dicta recusandae illum est dolores saepe, suscipit commodi corrupti. Quasi, laborum! Harum ipsa impedit quis nemo quod!</p>
+              <p>About us</p>
             </div>
           </div>
 
