[add] strategic-planning

--- a/index.html
+++ b/index.html
@@ -123,18 +123,22 @@
       <div class="container">
         <div class="row d-flex">
 
-          <div class="col d-bug">
+          <div class="col">
             <div class="card">
-              img
+              <img src="img/planning1.png" alt="">
               <h2>Strategic Planning</h2>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, officia illo velit quam ab architecto sint veritatis quas obcaecati ut in nam cumque eos excepturi temporibus veniam fuga? Reprehenderit, eaque.</p>
+              <p class="l-height">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, officia illo velit quam ab architecto sint veritatis quas obcaecati ut in nam cumque eos excepturi temporibus veniam fuga? Reprehenderit, eaque. In nam cumque eos excepturi temporibus veniam fuga?</p>
             </div>
           </div>
 
-          <div class="col d-bug">
-            <div class="card">
-              img
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, officia illo velit quam ab architecto sint veritatis quas obcaecati ut in nam cumque eos excepturi temporibus veniam fuga? Reprehenderit, eaque.</p>
+          <div class="col">
+            <div class="card text-center card-border">
+              <img src="img/planning2.png" alt="">
+              <h3 class="text-center">App Developement</h3>
+              <p class="text-center l-height">Develop an on-demand app for you <br> delivery business to reach your <br> targeten customers without any <br> interruption.</p>
+              <a href="#">
+                <i class="fa-solid fa-arrow-down-long"></i>
+              </a>
             </div>
           </div>
 
