--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
 
           <div class="col">
             <div class="card text-center card-border">
-              <img src="img/planning2.png" alt="">
+              <div class="app-img">
+                <img src="img/planning2.png" alt="">
+              </div>
               <h3 class="text-center">App Developement</h3>
-              <p class="text-center l-height">Develop an on-demand app for you <br> delivery business to reach your <br> targeten customers without any <br> interruption.</p>
+              <p class="text-center l-height">Develop an on-demand app for you delivery business to reach your targeten customers without any interruption.</p>
               <a href="#">
                 <i class="fa-solid fa-arrow-down-long"></i>
               </a>
