--- a/index.html
+++ b/index.html
@@ -124,15 +124,16 @@
         <div class="row d-flex">
 
           <div class="col">
-            <div class="card">
+            <div class="card top">
               <img src="img/planning1.png" alt="">
               <h2>Strategic Planning</h2>
-              <p class="l-height">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia, officia illo velit quam ab architecto sint veritatis quas obcaecati ut in nam cumque eos excepturi temporibus veniam fuga? Reprehenderit, eaque. In nam cumque eos excepturi temporibus veniam fuga?</p>
+              <p class="l-height">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem magnam aliquam ex consequuntur suscipit commodi quasi ipsa deserunt! Assumenda quod qui repellendus maxime sed doloremque quae obcaecati dolor nisi, officia ab provident itaque fugiat! Voluptates, praesentium laboriosam. Dolores, praesentium illum!
+              </p>
             </div>
           </div>
 
           <div class="col">
-            <div class="card text-center card-border">
+            <div class="card bottom text-center">
               <div class="app-img">
                 <img src="img/planning2.png" alt="">
               </div>
@@ -151,47 +152,60 @@
 
     <!-- testimonials -->
     <section class="testimonials">
-      <div class="container d-bug">
+      <div class="container text-center">
         <p>TESTIMONIALS</p>
-        <h2>We are commited expert partners</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ex optio fugiat, quia qui vitae eos iste perferendis iure mollitia.</p>
+        <h2>We are commited <br> expert partners</h2>
+        <p class="l-height">We place hugevalue on strong relationships and have seen the benefit they bring to our business. Customers feedback is vital in helping us to get it right.</p>
       </div>
 
       <div class="container">
         <div class="row d-flex">
 
-          <div class="col nat d-bug">
+          <div class="col nat">
             <div class="card">
-              img
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nesciunt laboriosam mollitia maxime quisquzam sint dignissimos amet, consectetur perspiciatis ztemporibus, necessitatibus facilis illo atque quidem esse culpa voluptates sequi eos voluptate aliquid explicabo placeat exercitationem eveniet illum. Ratione accusantium deleniti itaque iure exercitationem corrupti tempora delectus quia impedit officiis ut assumenda provident, vel illum explicabo.</p>
+              <div class="col">
+                <img src="img/testimonial1.jpg" alt="">
+              </div>
+              <div class="col">
+                <p class="l-height"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia exercitationem enim provident? Voluptate dolore ut odio maxime! Quis, itaque dolores?<i class="fa-solid fa-quote-right"></i></p>
+                <h3>NAT REYNOLDS</h3>
+              </div>
             </div>
           </div>
 
 
-          <div class="col celia d-bug">
+          <div class="col celia">
             <div class="card">
-              img
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aut dolores explicabo magnam autem voluptatum nihil. Exercitationem, in expedita dignissimos esse suscipit ad perspiciatis, deleniti, fugit odio assumenda recusandae beatae.</p>
+              <div class="col">
+                <img src="img/testimonial2.jpg" alt="">
+              </div>
+              <div class="col">
+                <p class="l-height"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia exercitationem enim provident? Voluptate dolore ut odio maxime! Quis, itaque dolores?<i class="fa-solid fa-quote-right"></i></p>
+                <h3>CELIA ALMEDA</h3>
             </div>
           </div>
 
 
-          <div class="col bob d-bug">
+          <div class="col bob">
             <div class="card">
-              img
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aut dolores explicabo magnam autem voluptatum nihil. Exercitationem, in expedita dignissimos esse suscipit ad perspiciatis, deleniti, fugit odio assumenda recusandae beatae.
-              </p>
+              <div class="col">
+                <img src="img/testimonial3.jpg" alt="">
+              </div>
+              <div class="col">
+                <p class="l-height"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia exercitationem enim provident? Voluptate dolore ut odio maxime! Quis, itaque dolores?<i class="fa-solid fa-quote-right"></i></p>
+                <h3>BOB ROBERTS</h3>
+              </div>
             </div>
           </div>
-
+          
         </div>
       </div>
     </section>
 
     <!-- benefits -->
     <section class="benefits">
-      <div class="container">
-        <h2>Benefits of working with br us</h2>
+      <div class="container text-center">
+        <h2>Benefits of working with us</h2>
       </div>
 
       <div class="container">
