--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <a href="#">About Us</a>
                 </li>
                 <li>
-                  <a class="btn-border" href="#">Get Started</a>
+                  <a class="btn-style" href="#">Get Started</a>
                 </li>
               </ul>
             </nav>
@@ -62,7 +62,7 @@
                   Get a demo application
                 </h2>
                 <p class="l-height">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores provident, odit ratione, pariatur nesciunt corporis consectetur distinctio odio veritatis laborum incidunt.</p>
-                <a class="btn btn-border" href="#">
+                <a class="btn btn-style" href="#">
                   <i class="fa-brands fa-apple"></i>
                   App Store
                 </a>
@@ -184,6 +184,7 @@
                 <h3>CELIA ALMEDA</h3>
             </div>
           </div>
+          </div>
 
 
           <div class="col bob">
@@ -201,6 +202,7 @@
         </div>
       </div>
     </section>
+    <!-- testimonials -->
 
     <!-- benefits -->
     <section class="benefits">
@@ -210,53 +212,60 @@
 
       <div class="container">
         <div class="row d-flex">
-          <div class="col quality d-bug">
+          <div class="col">
             <div class="card">
               <h2>01</h2>
               <h3>Hight Quality</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+              <p class="l-height">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit magnam tenetur voluptas! Perspiciatis accusamus quibusdam autem ea, asperiores error numquam.</p>
+              <a class="btn btn-style" href="#">more</a>
             </div>
           </div>
 
-          <div class="col d-bug">
+          <div class="col">
             <div class="card">
               <h2>02</h2>
-              <h3>Hight Quality</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+              <h3>Creative Team</h3>
+              <p class="l-height">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit magnam tenetur voluptas! Perspiciatis accusamus quibusdam autem ea, asperiores error numquam.</p>
+              <a class="btn btn-style" href="#">more</a>
             </div>
           </div>
 
-          <div class="col d-bug">
+          <div class="col">
             <div class="card">
               <h2>03</h2>
-              <h3>Hight Quality</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+              <h3>Amazing Results</h3>
+              <p class="l-height">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit magnam tenetur voluptas! Perspiciatis accusamus quibusdam autem ea, asperiores error numquam.</p>
+              <a class="btn btn-style" href="#">more</a>
             </div>
           </div>
 
-          <div class="col d-bug">
+          <div class="col">
             <div class="card">
               <h2>04</h2>
-              <h3>Hight Quality</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+              <h3>Best Pricing</h3>
+              <p class="l-height">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit magnam tenetur voluptas! Perspiciatis accusamus quibusdam autem ea, asperiores error numquam.</p>
+              <a class="btn btn-style" href="#">more</a>
             </div>
           </div>
 
-          <div class="col d-bug">
+          <div class="col">
             <div class="card">
               <h2>05</h2>
-              <h3>Hight Quality</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+              <h3>Innovation</h3>
+              <p class="l-height">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit magnam tenetur voluptas! Perspiciatis accusamus quibusdam autem ea, asperiores error numquam.</p>
+              <a class="btn btn-style" href="#">more</a>
             </div>
           </div>
 
-          <div class="col d-bug">
+          <div class="col">
             <div class="card">
               <h2>06</h2>
-              <h3>Hight Quality</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi quibusdam corrupti possimus earum rem aliquam ex animi vero in quae!</p>
+              <h3>24/7 Support</h3>
+              <p class="l-height">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit magnam tenetur voluptas! Perspiciatis accusamus quibusdam autem ea, asperiores error numquam.</p>
+              <a class="btn btn-style" href="#">more</a>
             </div>
           </div>
+
 
         </div>
       </div>
