--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <a href="#">About Us</a>
                 </li>
                 <li>
-                  <a class="btn-style" href="#">Get Started</a>
+                  <a class="#" href="#">Get Started</a>
                 </li>
               </ul>
             </nav>
@@ -277,48 +277,58 @@
       <div class="container">
         <div class="row d-flex">
 
-          <div class="col d-bug">
+          <div class="col ">
             <div class="card">
               <h2>About Us</h2>
-              <p>About us</p>
+              <p class=" text l-height">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid harum magnam praesentium velit? Reiciendis molestiae libero exercitationem facilis. Aliquam qui libero laudantium praesentium itaque commodi suscipit, blanditiis expedita porro omnis cum asperiores minus inventore deleniti accusamus veniam eveniet perspiciatis eum et exercitationem. Consequatur odit optio nulla quidem veniam fuga facere soluta minus, quod officiis rerum, amet explicabo iusto obcaecati! Ad quaerat suscipit sunt nisi corporis rem? Autem asperiores tempore dicta?</p>
+              <p class="l-height">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur soluta ab, laborum in obcaecati expedita. Delectus pariatur rem aperiam quis similique voluptatum culpa, ipsa ratione quas quaerat impedit illum dolorem iure labore! Odit, fugit consequatur culpa suscipit earum adipisci excepturi laborum beatae reprehenderit exercitationem maiores sunt, inventore ducimus mollitia incidunt.</p>
             </div>
           </div>
 
-          <div class="col d-bug">
+          <div class="col">
             <div class="card">
-              img
-              <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, neque?</h3>
-              <a href="">Find me on linkedin</a>
+              <div class="img-about">
+                <i class="fa-solid fa-quote-left"></i>
+                <img src="img/about.jpg" alt="">
+              </div>
+              <h3>I help companies tincidunt tortor aliquam nulla facilisi cras frementum odio.</h3>
+              <a class="btn" href="#">
+                <i class="fa-brands fa-linkedin"></i>
+                Find me on linkedin
+              </a>
             </div>
           </div>
 
         </div>
       </div>
     </section>
+    <!-- /about us -->
 
     <!-- get-started -->
     <section class="get-started">
-      <div class="container">
+      <div class="container text-center">
         <div class="row">
 
-          <div class="col d-bug">
+          <div class="col">
             <div class="card">
               <span>GET STARTED</span>
-              <H3>Simple, Transparent Pricing</H3>
+              <H2 class="simple">Simple, Transparent Pricing</H2>
             </div>
           </div>
 
-          <div class="col free d-bug">
+          <div class="col free">
             <div class="card">
               <h2>It's Free!</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo et dignissimos dolore illo ex nam!</p>
+              <div class="text">
+                <p class="l-height">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est voluptatum fuga nobis autem? Adipisci, ullam.</p>
+              </div>
             </div>
           </div>
 
-          <div class="col d-bug">
+          <div class="col bottom">
             <div class="card">
-              <a href="#">Get Started</a> <br>
-              <span>Copyright 2021 Boolean</span>
+              <a class="btn btn-style" href="#">Get Started</a> <br>
+              <p>Copyright 2021 Boolean  • Classe XX  • <a href="#">Privacy policy</a></p>
             </div>
           </div>
 
@@ -330,7 +340,7 @@
   
   <footer>
     <section class="footer">
-      <div class="container">
+      <div class="container text-center">
         <div class="row">
 
           <div class="col">
@@ -341,7 +351,7 @@
 
           <div class="col">
             <div class="card">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              <p><a href="#">Lorem ipsum</a> scelerisque mauris pellentesque <a href="#">Boolean careers</a>
               </p>
             </div>
           </div>
