--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <a href="#">About Us</a>
                 </li>
                 <li>
-                  <a class="#" href="#">Get Started</a>
+                  <a class="black" href="#">Get Started</a>
                 </li>
               </ul>
             </nav>
@@ -74,7 +74,7 @@
           </div>
 
           <div class="col text-center">
-            <div class="card d-flex">
+            <div class="card clean d-flex">
               <i class="icon fa-solid fa-file-code"></i>
               <h2>
                 Clean Code
@@ -154,7 +154,7 @@
     <section class="testimonials">
       <div class="container text-center">
         <p>TESTIMONIALS</p>
-        <h2>We are commited <br> expert partners</h2>
+        <h2>We are commited expert partners</h2>
         <p class="l-height">We place hugevalue on strong relationships and have seen the benefit they bring to our business. Customers feedback is vital in helping us to get it right.</p>
       </div>
 
@@ -163,11 +163,11 @@
 
           <div class="col nat">
             <div class="card">
-              <div class="col">
+              <div class="col d-flex">
                 <img src="img/testimonial1.jpg" alt="">
               </div>
-              <div class="col">
-                <p class="l-height"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia exercitationem enim provident? Voluptate dolore ut odio maxime! Quis, itaque dolores?<i class="fa-solid fa-quote-right"></i></p>
+              <div class="col text-center">
+                <p class="l-height"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia exercitationem enim provident? Voluptate dolore ut odio maxime! Quis, itaque dolores?  Quis, itaque dolores?<i class="fa-solid fa-quote-right"></i></p>
                 <h3>NAT REYNOLDS</h3>
               </div>
             </div>
@@ -176,24 +176,24 @@
 
           <div class="col celia">
             <div class="card">
-              <div class="col">
+              <div class="col d-flex">
                 <img src="img/testimonial2.jpg" alt="">
               </div>
-              <div class="col">
-                <p class="l-height"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia exercitationem enim provident? Voluptate dolore ut odio maxime! Quis, itaque dolores?<i class="fa-solid fa-quote-right"></i></p>
+              <div class="col text-center">
+                <p class="l-height"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia exercitationem enim provident? Voluptate dolore ut odio maxime! Quis, itaque dolores?  Quis, itaque dolores?<i class="fa-solid fa-quote-right"></i></p>
                 <h3>CELIA ALMEDA</h3>
+              </div>
             </div>
-          </div>
           </div>
 
 
           <div class="col bob">
             <div class="card">
-              <div class="col">
+              <div class="col d-flex">
                 <img src="img/testimonial3.jpg" alt="">
               </div>
-              <div class="col">
-                <p class="l-height"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia exercitationem enim provident? Voluptate dolore ut odio maxime! Quis, itaque dolores?<i class="fa-solid fa-quote-right"></i></p>
+              <div class="col text-center">
+                <p class="l-height"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia exercitationem enim provident? Voluptate dolore ut odio maxime! Quis, itaque dolores? Quis, itaque dolores?<i class="fa-solid fa-quote-right"></i></p>
                 <h3>BOB ROBERTS</h3>
               </div>
             </div>
@@ -215,7 +215,7 @@
           <div class="col">
             <div class="card">
               <h2>01</h2>
-              <h3>Hight Quality</h3>
+              <h3>High Quality</h3>
               <p class="l-height">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit magnam tenetur voluptas! Perspiciatis accusamus quibusdam autem ea, asperiores error numquam.</p>
               <a class="btn btn-style" href="#">more</a>
             </div>
